--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 <div class="jd-content"> 
 
  
-<span style="color:#FF0000"> <strong>--------------------------------------------------------------------------------MODELOS  AF----------------------------------------------------------------------------------------------------</strong></span>
+<span style="color:#FFffff"> <strong>--------------------------------------------------------------------------------MODELOS  AF----------------------------------------------------------------------------------------------------</strong></span>
 <p></p>                                               
                                                  
  
@@ -540,7 +540,7 @@ body {
 <div class="jd-content"> 
 
 
-<span style="color:#FF0000"> <strong>--------------------------------------------------------------------------------MODELOS  BT----------------------------------------------------------------------------------------------------</strong></span>
+<span style="color:#FFffff"> <strong>--------------------------------------------------------------------------------MODELOS  BT----------------------------------------------------------------------------------------------------</strong></span>
 <p></p> 
 
   
